Fix GitHub icon alignment and contribution order

--- a/style.css
+++ b/style.css
@@ -126,17 +126,22 @@ a:hover {
 }
 
 .github-link {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  display: inline;
+  white-space: nowrap;
+  margin-left: 0.15em;
   border-radius: 3px;
-  vertical-align: -0.12em;
+}
+
+.github-link::before {
+  content: "\2060";
 }
 
 .github-link .icon {
+  display: inline-block;
   width: 13px;
   height: 13px;
   margin: 0;
+  vertical-align: middle;
 }
 
 h3 .github-link .icon {
